--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -12,7 +12,7 @@
 </TMPL_IF>
 
 <TMPL_IF NAME="BODY">
-	<div style="padding:10px;">
+	<div class="box">
 		<TMPL_VAR NAME="BODY">
 	</div>
 </TMPL_IF>
