--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -423,7 +423,7 @@ function load_from_ncbi() {
   </TMPL_IF>
 
   <div id="tab-4" class="small" style="height:200px;">
-  	Select a file to upload from your computer.  This method is best for smaller files (less than 2GB). 
+  	Select a file to upload from your computer.  This method is best for smaller files (less than 200MB, 2GB maximum). 
   	For larger files use the iPlant Data Store. <br><br><br>
     File: <input id="input_upload_file" name="input_upload_file" type="file" size="30" data-url='<TMPL_VAR NAME="PAGE_NAME">' />
   </div> <!-- tab-4 -->
