--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -29,7 +29,7 @@ function cross_fade(first_time) {
 
 		["500px-Reconstructingchromosomes.png", "Reconstruting maize chromosomes through syntenic dotplot comparisons to sorghum", "Splitting_maize_genome"],
 		["Grapevine-peach_K2_historgram.png","Historgram of synonymous mutation values between grape and peach","Syntenic_dotplot_of_peach_versus_grape"],
-		["k12-CDS-aa-usage.png","E. coli's amino acid usage as a function of CDS GC content","CodeOn"],
+		//["k12-CDS-aa-usage.png","E. coli's amino acid usage as a function of CDS GC content","CodeOn"],
 		["600px-Plasmodium-codon-substitution-matirx.png", "Codon substitution matrix of two Plasmodia species","Plasmodia_comparative_genomics"],
 		["800px-Human-mouse-tandem-gene-duplication.png","Human-mouse syntenic comparison showing a conserved tandem gene cluster","Local_Gene_Duplication"],
 		["600px-SynPlot-Chr1-At-v-Al.png", "Synonymous mutation histogram of syntenic genes between two species of Arabidopsis showing orthologous pairs and those derived from a shared whole genome duplication event","Syntenic_comparison_of_Arabidopsis_thaliana_and_Arabidopsis_lyrata"],
@@ -127,7 +127,7 @@ function handle_latest_genome_list(list) {
 				CoGe's unique system architecture provides many <a target="_blank" href="http://genomevolution.org/wiki/index.php/Documentation#Web_Application_Documentation">interconnected tools</a> to create <a target="_blank" href="http://genomevolution.org/wiki/index.php/Open-ended_Analysis_Network">open-ended analysis networks</a>.
 				CoGe also provides an easy-to-use framework to organize and share your data and analyses.
 				<br><br>
-				There is no defined place to start an anlysis on CoGe, pick any tool below to begin!
+				There is no defined place to start an analysis on CoGe, pick any tool below to begin!
 			</div>
 	</div>
 	
