--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -60,7 +60,7 @@
         }
 
 		#map_OpenLayers_ViewPort { /* mdb added 12/12/12 - tempfix for experiment layers out of view in control */
-			overflow: auto !important;
+			overflow-y: auto !important;
 		}
     </style>
     
