--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -136,8 +136,20 @@ function activate_on_input(input_id, button_id) {
 	}
 }
 
+function resolve_path(path) {
+	if (path == '.') {
+		return pageObj.current_path;
+	}
+	else if (path == '..') {
+		return pageObj.parent_path;
+	}
+	return path;
+}
+
 function irods_get_path (path) {
-	$('#ids_loading').hide();
+	$('#ids_loading').fadeIn();
+
+	path = resolve_path(path);
 
 	$.ajax({
 		data: {
@@ -147,7 +159,7 @@ function irods_get_path (path) {
 			timestamp: new Date().getTime()
 		},
 		success : function(data) {
-			$('#ids_loading').hide();
+			$('#ids_loading').fadeOut();
 			
 			var result = jQuery.parseJSON(data);
 			if (result == null) {
@@ -166,16 +178,13 @@ function irods_get_path (path) {
 
 			$('#ids_table').html('');
 			var parent_path = result.path.split('/').slice(0,-2).join('/') + '/';
-			var up_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+parent_path+"\")'><span class='ui-icon ui-icon-arrowreturnthick-1-n'/>Go Up</span>";
-			var refresh_icon  = "<span class='link' style='padding-left:15px;' onclick='irods_get_path(\""+result.path+"\")'><span class='ui-icon ui-icon-refresh'/>Refresh</span>";
-			var home_icon  = "<span class='link' onclick='irods_get_path()'><span class='ui-icon ui-icon-home'/>Home</span>";
-			var get_icon = '';
-			<TMPL_UNLESS NAME='DISABLE_IRODS_GET_ALL'>
-			get_icon = "<span class='link' style='padding-left:15px;' onclick='irods_get_all_files(\""+result.path+"\")'><span class='ui-icon ui-icon-transferthick-e-w' />Get All Files</span>";
-			</TMPL_UNLESS>
 			
-			$('#ids_table').append('<tr><td colspan="3" style="white-space:nowrap;border-bottom-style:solid;border-bottom-width:thin;">'+home_icon+up_icon+refresh_icon+get_icon+'</td></tr>').append('<tr><td colspan="3" style="white-space:nowrap;font-weight:bold;">'+result.path+'</td></tr>');
-			
+			// Save for later resolve_path()
+			pageObj.parent_path = parent_path;
+			pageObj.current_path = result.path;
+
+			$('#ids_current_path').html(result.path);
+
 			if (result.items.length == 0) {
 				$('#ids_table').append('<tr><td style="padding-left:20px;font-style:italic;color:gray;">(empty)</td></tr>');
 			}
@@ -238,6 +247,8 @@ function irods_get_file(path) {
 }
 
 function irods_get_all_files (path) {
+	path = resolve_path(path);
+
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -394,10 +405,18 @@ function load_from_ncbi() {
   </ul>
 
   <div id="tab-1" class="small">
+	<div style="white-space:nowrap;border-bottom:1px solid gray;">
+		<img id="ids_loading" src="picts/ajax-loader.gif" style="float:right;"/>
+		<span class='link' onclick='irods_get_path()'><span class='ui-icon ui-icon-home'></span>Home</span>
+		<span class='link' style='padding-left:15px;' onclick='irods_get_path("..")'><span class='ui-icon ui-icon-arrowreturnthick-1-n'></span>Go Up</span>
+		<span class='link' style='padding-left:15px;' onclick='irods_get_path(".")'><span class='ui-icon ui-icon-refresh'></span>Refresh</span>
+		<TMPL_UNLESS NAME='DISABLE_IRODS_GET_ALL'>
+		<span class='link' style='padding-left:15px;' onclick='irods_get_all_files(".")'><span class='ui-icon ui-icon-transferthick-e-w'></span>Get All Files</span>
+		</TMPL_UNLESS>
+	</div>
+	<div id="ids_current_path" style="font-weight:bold;padding-top:10px;"></div>
     <div style="overflow-y:auto;height:200px;">
-      <span id="ids_loading" class="note">Loading <img id="wait_annotation" src="picts/ajax-loader.gif" /></span>
-      <table id="ids_table" class='small'>
-      </table>
+    	<table id="ids_table" class="small" style="width:100%"></table>
     </div>
   </div> <!-- tab-1 -->
 
