--- a/web/tmpl/ExperimentView.tmpl
+++ b/web/tmpl/ExperimentView.tmpl
@@ -288,9 +288,9 @@ function image_preview(obj, preview) {
  </div>
 </div>
 
-<div id="experiment_info_edit_box" class="dialog_box" title="Edit Experiment Info"></div>
+<div id="experiment_info_edit_box" class="dialog_box" title="Edit Experiment Info" style="display:none;"></div>
 
-<div id="experiment_type_edit_box" class="dialog_box" title="Add Experiment Type">
+<div id="experiment_type_edit_box" class="dialog_box" title="Add Experiment Type" style="display:none;">
   <table class="small">
    <tr>
     <td>Name:</td>
