--- a/web/tmpl/GenomeList.tmpl
+++ b/web/tmpl/GenomeList.tmpl
@@ -667,7 +667,7 @@ function edit_list_info (lid) {
 	</form>
 
 
-<div class="dialog_box" id="edit_genome_info" title="Edit Genome Information"></div>
+<div class="dialog_box" id="edit_genome_info" title="Edit Genome Information" style="display:none;"></div>
 
 
 
