--- a/web/tmpl/GroupView.tmpl
+++ b/web/tmpl/GroupView.tmpl
@@ -334,9 +334,9 @@ function delete_group (opts) {
  <TMPL_VAR NAME="GROUP_INFO">
 </div>
 
-<div id="group_info_edit_box"  class="dialog_box"></div>
-<div id="group_users_edit_box" class="dialog_box"></div>
-<div id="group_lists_edit_box" class="dialog_box"></div>
+<div id="group_info_edit_box"  class="dialog_box" style="display:none;"></div>
+<div id="group_users_edit_box" class="dialog_box" style="display:none;"></div>
+<div id="group_lists_edit_box" class="dialog_box" style="display:none;"></div>
 
 <div id="group_delete_box" class="dialog_box" style='display:none;' align='center'>
 Are you sure you want to permanently delete this group?<p>
@@ -521,6 +521,6 @@ Admin Functions:<br>
  <TMPL_VAR NAME=ADMIN_BUTTONS>
 </div>
 
-<div id="group_creator_edit_box" class="dialog_box"></div>
+<div id="group_creator_edit_box" class="dialog_box" style="display:none;"></div>
 
 </TMPL_IF> <!-- ADMIN_AREA -->
