--- a/web/tmpl/History.tmpl
+++ b/web/tmpl/History.tmpl
@@ -76,7 +76,7 @@ $(function () {
 		cache: false,
 	});
 
-	$(".dialog_box").dialog({autoOpen: false, width: 600});
+	//$(".dialog_box").dialog({autoOpen: false, width: 600});
 
 	$('#filter_count').html('Loading ... <img src="picts/ajax-loader.gif"/>');
 
