--- a/web/tmpl/Sources.tmpl
+++ b/web/tmpl/Sources.tmpl
@@ -141,7 +141,7 @@ function update_source_info (dsid){
 
 <div id='admin_stuff'></div>
 
-<div id="source_info_edit_box" class="dialog_box"></div>
+<div id="source_info_edit_box" class="dialog_box" style="display:none;"></div>
 
 </TMPL_IF> <!-- MAIN -->
 
