--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -168,7 +168,7 @@ function get_latest_genomes() {
 			</div>
 		</div>
 	
-		<div id="crossfade" style="float:left;height:300px;padding-left:100px;"></div>
+		<div id="crossfade" class="link" style="float:left;height:300px;padding-left:100px;"></div>
 	</div>
 	
 	<div style="clear:both;"></div>
