--- a/web/tmpl/widgets/AddAnnotation.tmpl
+++ b/web/tmpl/widgets/AddAnnotation.tmpl
@@ -206,7 +206,7 @@ function verify_image_file(file) {
 }
 </SCRIPT>
 
-<div id="annotation_edit_box" class="dialog_box">
+<div id="annotation_edit_box" class="dialog_box" style="display:none;">
   <table class="small">
     <tr valign='top'>
       <td>Annotation:</td>
