--- a/web/tmpl/widgets/GenomeSelect.tmpl
+++ b/web/tmpl/widgets/GenomeSelect.tmpl
@@ -398,7 +398,7 @@ function import_lists() {
 </table>
 
 <!--POPUP-->
-  <div id="import_list_box" class="dialog_box" title="Import List">
+  <div id="import_list_box" class="dialog_box" title="Import List" style="display:none;">
     <table class="small">
       <tr>
         <td colspan='2'>
@@ -426,5 +426,5 @@ function import_lists() {
 
 
 <!--POPUP-->
-  <div id="genome_info_popup" class="dialog_box" title="Genome Information">
+  <div id="genome_info_popup" class="dialog_box" title="Genome Information" style="display:none;">
   </div>
