--- a/web/tmpl/NotebookView.tmpl
+++ b/web/tmpl/NotebookView.tmpl
@@ -443,13 +443,13 @@ function image_preview(obj, preview) {
   <td>
    <span style="color:dimgray;font-weight:bold;">Info</span><br>
    <div id="list_info">
-    <TMPL_VAR NAME=LIST_INFO>
+    <TMPL_VAR NAME="LIST_INFO">
    </div>
   </td>
   <td style="padding-left:20px;">
    <span style="color:dimgray;font-weight:bold;">Annotations</span><br>
    <div id='list_annotations'>
-    <TMPL_VAR NAME=LIST_ANNOTATIONS>
+    <TMPL_VAR NAME="LIST_ANNOTATIONS">
    </div>
   </td>
   </tr>
@@ -457,15 +457,15 @@ function image_preview(obj, preview) {
 
 <br>
 
-<div>
+<div style="padding-left:5px;">
  <span style="color:dimgray;font-weight:bold;">Contents</span><br>
  <div id="list_contents">
   <TMPL_VAR NAME="LIST_CONTENTS">
  </div>
 </div>
 
-<br>
-<div class='small'>
+<br> 
+<div class='small' style="padding-left:5px;">
 Send contents to:  
  <select name="checked_action" id="checked_action">
   <option value="send_to_blast">CoGeBlast (genomes only)</option>
@@ -482,11 +482,11 @@ Send contents to:
  <span class='ui-button ui-corner-all ui-button-icon-right ui-button-go' onclick="send_list_to();"><span class="ui-icon ui-icon-extlink"></span>Go</span>
 </div>
 
-<div id="list_info_edit_box" class="dialog_box" title="Edit Notebook Info"></div>
+<div id="list_info_edit_box" class="dialog_box" title="Edit Notebook Info" style="display:none;"></div>
 
 <TMPL_INCLUDE NAME='widgets/AddAnnotation.tmpl'> <!-- Add/Edit Annotation Dialog -->
 
-<div id="list_contents_edit_box" class="dialog_box" title="Add Items to Notebook"></div>
+<div id="list_contents_edit_box" class="dialog_box" title="Add Items to Notebook" style="display:none;"></div>
 
 <div id="list_delete_box" class="dialog_box" style='display:none;' align='center'>
 Are you sure you want to permanently delete this notebook?<p>
