--- a/web/tmpl/Notebooks.tmpl
+++ b/web/tmpl/Notebooks.tmpl
@@ -149,7 +149,7 @@ function dialog_delete_list (opts) {
 
 <div id="lists"><TMPL_VAR NAME="LIST_INFO"></div>
 
-<div id="edit_box" class="dialog_box"></div>
+<div id="edit_box" class="dialog_box" style="display:none;"></div>
 
 <div id="list_delete_box" class="dialog_box" style='display:none;' align='center'>
 Are you sure you want to permanently delete this notebook?<p>
